# crewai-aws-s3

ia_integration_aws/: README.md  pyproject.toml  report.md
ia_integration_aws/src/ia_integration_aws/: crew.py  main.py
ia_integration_aws/src/ia_integration_aws/config/: agents.yaml  tasks.yaml
