[project]
name = "ia_integration_aws"
version = "0.1.0"
description = "ia-integration-aws using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
ia_integration_aws = "ia_integration_aws.main:run"
run_crew = "ia_integration_aws.main:run"
train = "ia_integration_aws.main:train"
replay = "ia_integration_aws.main:replay"
test = "ia_integration_aws.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
